Fixed tag layout on mobile

--- a/wp-content/themes/tomdallimore/assets/src/sass/_blog.scss
+++ b/wp-content/themes/tomdallimore/assets/src/sass/_blog.scss
@@ -20,15 +20,16 @@
                     .tags {
                         a {
                             background-color: $white;
-                            padding:7px 10px;
+                            padding:3px 10px;
                             color: $lightgray;
-                            margin-right:12px;
+                            margin:0 12px 11px 0;
                             font-family: "MuseoSlab-500", Helvetica, Arial, sans-serif;
                             @include transition-property(background-color, color);
                             @include transition-duration(0.5s, 0.4s);
                             @include transition-timing-function(ease-in, ease-in);
                             text-transform: uppercase;
                             font-size:0.8em;
+                            display: inline-block;
                                 &:hover {
                                     color: #fff;
                                     background-color: $blue;
